# parser

./: .rustfmt.toml  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md
.github/workflows/: tests.yml
examples/: array.php  assign.php  better-class.php  bitwise-not.php  bitwise.php  boolean.php  break.php  call.php  class.php  closures.php  comparison.php  continue.php  do-while.php  echo.php  elseif.php  fib.php  foreach.php  functions.php  grouping.php  if.php  index.html  math.php  method-call.php  negate.php  new.php  property-access.php  unary.php  use.php  while.php
src/: binary_op.rs  binding_power.rs  class.rs  error.rs  expression.rs  flag.rs  function.rs  if_statement.rs  lib.rs  nullable.rs  parser.rs  parser_v2.rs  property.rs  statement.rs
src/parser/: mod.rs
src/parser/states/: default.rs  mod.rs
tests/: parser_test.rs
