[package]
name = "tusk_parser"
version = "0.1.0"
edition = "2018"
authors = ["Ryan Chandler <support@ryangjchandler.co.uk>"]
license = "MIT"
description = "The parser component of Tusk."
categories = ["compilers", "parsing", "text-processing"]
repository = "https://github.com/tuskphp/parser"
keywords = ["parser", "parsing", "php"]

[dependencies]
tusk_lexer = "0.4.5"
thiserror = "1.0.*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "tusk_parser"
path = "bin/main.rs"